--- a/biografia-de.html
+++ b/biografia-de.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Curriculum Vitae | Nuno Mimoso</title>
+<title>Biographie | Nuno Mimoso</title>
 
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
@@ -49,7 +49,7 @@
     <div class="menu-direita">
       <ul>
         <li><a href="index-de.html">HOME</a></li>        
-        <li><a href="biografia-de.html">CURRICULUM VITAE</a></li>    
+        <li><a href="biografia-de.html">BIOGRAPHIE</a></li>    
         <li><a href="dominios-de.html">LEISTUNGEN</a></li>   
         <li><a href="actividades-de.html">TÄTIGKEITEN</a></li> 
         <li><a href="publicacoes-de.html">BEITRÄGE</a></li> 
@@ -71,27 +71,27 @@
 <!-- Conteúdo -->
 <main>
   <div class="texto-apresentacao">
-    <h1 style="text-align: left;">BIOGRAFIA</h1>
+    <h1 style="text-align: left;">BIOGRAPHIE</h1>
 
-    <p style="text-align: justify;">músico sacro, organista, barítono lírico, musicólogo, consultor, formador, director artístico.</p>
+    <p style="text-align: justify;">Kirchenmusiker, Organist, lyrischer Bariton, Musikwissenschaftler, Kulturberater, Dozent, künstlerischer Leiter.</p>
 
-    <h2 style="text-align: left;">Organista.</h2>
-    <p style="text-align: justify;">Diplomado em Órgão - Pedagogia Instrumental pela Escola Superior de Música Sacra e Pedagogia Musical de Ratisbona (Baviera, Alemanha) com a tese <em>A Batalha na Música Ibérica para Órgão no século XVII</em>. Foi bolseiro da Diocese de Ratisbona entre 2011-2016. Discípulo de Franz Josef Stoiber, complementou a formação prática como organista auxiliar na Catedral de S. Pedro de Ratisbona e como assistente na Escola de Música Catedralícia <em>Domspatzen</em>. Cursou interpretação organística especializada em diferentes estilos e tipologias organísticas, junto dos mestres Ludger Lohmann, Jörg-Andreas Bötticher, Bernhard Buttmann, Edgar Krapp. Organista de liturgia e concerto com apresentações na Alemanha, Áustria, Itália, Galiza e Portugal.</p>
+    <h2 style="text-align: left;">Organist.</h2>
+    <p style="text-align: justify;">Diplomorganist an der Hochschule für Katholische Kirchenmusik und Musikpädagogik Regensburg. Abschlussarbeit <em>„Die Bataglia in der iberischen Orgelmusik des 17. Jahrhunderts“</em>. Schüler des Organisten Franz Josef Stoiber. Praktische Ausbildung als Organist an der Kathedrale St. Peter in Regensburg und als Assistent an der Domspatzen-Musikschule. Stipendiat der Diözese Regensburg (2011–2016). Meisterkurse in stilistisch differenzierter Orgelinterpretation bei Ludger Lohmann, Jörg-Andreas Bötticher, Bernhard Buttmann und Edgar Krapp. Konzert- und Liturgieauftritte in Deutschland, Österreich, Italien, Galicien und Portugal.</p>
 
-    <h2 style="text-align: left;">Patrimonialista.</h2>
-    <p style="text-align: justify;">Mestre em Património Cultural e Museologia pela Faculdade de Letras da Universidade de Coimbra com a tese <em>Património Organístico Português: Problemas e Soluções de Conservação e Reabilitação</em>. Premiado no Quadro de Mérito da Universidade de Coimbra (19 valores). Membro da <em>Gesellschaft der Orgelfreunde</em>, associação alemã para promoção da cultura organística internacional. Foi colaborador da Meloteca: Sítio da Música e das Artes, para o Inventário dos Órgãos de Portugal, objecto de estudo doutoral. Colabora regularmente com instituições culturais nas <em>Jornadas Europeias do Património</em>.</p>
+    <h2 style="text-align: left;">Kulturerbeforscher.</h2>
+    <p style="text-align: justify;">Master in <em>Kulturerbe und Museologie</em> an der Universität Coimbra. Mit Auszeichnung (19/20 Punkte). Dissertation <em>„Das portugiesische Orgelerbe: Probleme und Lösungen der Erhaltung und Restaurierung“</em>. Mitglied der <em>Gesellschaft der Orgelfreunde</em> (GdO). Mitarbeit an der Webseite Meloteca – <em>Ort für Musik und Künste bei dem Projekt Orgelverzeichnis Portugals</em>, das derzeit Gegenstand seiner Promotionsforschung ist. Mitwirkung an den Europäischen Tagen des Kulturerbes im Auftrag kultureller Institutionen..</p>
 
-    <h2 style="text-align: left;">Consultor.</h2>
-    <p style="text-align: justify;">Consultor da Direcção de Serviços dos Bens Culturais da Direcção Regional de Cultura do Norte (DRCN) entre 2018-2023. Autor de Projectos de Restauro, Estudos Prévios, Cadernos de Encargos, Fiscalização Técnica, Dinamização Cultural, dos seguintes órgãos históricos: Mosteiro de Santa Clara do Porto (órgão da nave e órgão do coro-alto), Igreja de São João Novo (Porto), Capela da Confraria de Nossa Senhora da Conceição (Guimarães), Colegiada de Nossa Senhora da Oliveira (Guimarães), Matriz de Santa Marinha do Zêzere (Baião), Mosteiro de Ancede (Baião), Mosteiro de São Bento da Vitória (Porto), Matriz de Penafiel.</p>
+    <h2 style="text-align: left;">Berater.</h2>
+    <p style="text-align: justify;">Kulturberater der Abteilung für Kulturgüter des Kulturministeriums der Nordregion Portugals (DRCN 2018-2023). Autor zahlreicher Restaurierungsprojekte, denkmalpflegerischer Vorstudien, Leistungsverzeichnisse, technischer Aufsicht und kultureller Vermittlungsprogramme für historische Orgeln, u. a. im Kloster Santa Clara do Porto (Schiff- und Chororgel), Kirche São João Novo (Porto), Kapelle der Bruderschaft Senhora da Conceição (Guimarães), Kollegiatkirche Senhora da Oliveira (Guimarães), Pfarrkirche Santa Marinha do Zêzere (Baião), Kloster Ancede (Baião), Benediktinerkloster São Bento da Vitória (Porto) und Pfarrkirche Penafiel.</p>
 
-    <h2 style="text-align: left;">Musicólogo.</h2>
-    <p style="text-align: justify;">Coordenador Científico e Co-Autor do livro <em>Património Musical de Santa Clara do Porto</em> (2023), que abarcou estudo do acervo musicográfico do cenóbio clariano portuense, catalogação musicológica, disponibilização pública na <em>Biblioteca Nacional Digital</em>, transcrição musicográfica, edição crítica de obras dos mestres Francisco de São Boaventura, António da Silva Leite, Marcos Portugal. Director Científico do catálogo e estudo do fundo musical da Colegiada de Guimarães custodiado pelo <em>Arquivo Municipal Alfredo Pimenta</em> (Câmara Municipal de Guimarães) e pela <em>Sociedade Martins Sarmento</em>, no prelo.</p>
+    <h2 style="text-align: left;">Musikwissenschaftler.</h2>
+    <p style="text-align: justify;">Wissenschaftlicher Leiter und Hauptautor des Buches <em>Património Musical de Santa Clara do Porto</em> (2023), das die musikwissenschaftliche Erschließung, Katalogisierung und kritische Edition des Musikbestands des Klarissenklosters von Porto umfasst. Veröffentlichung in der <em>Biblioteca Nacional Digital</em> mit Editionen von Werken der komponisten Francisco de São Boaventura, António da Silva Leite und Marcos Portugal. Wissenschaftlicher Leiter des Katalogs und der Studie zum Musikarchiv der Kollegiatkirche Guimarães (Stadtarchiv Alfredo Pimenta / Stadt Guimarães und Sociedade Martins Sarmento, in Vorbereitung).</p>
 
-    <h2 style="text-align: left;">Cantor e Formador.</h2>
-    <p style="text-align: justify;">Membro do Círculo Portuense de Ópera com várias apresentações no Coliseu do Porto entre 2004-2007. Discípulo do barítono lírico Nuno de Vilallonga (Madrid/Lisboa). Enquanto director de coro, organista, cantor e formador, colaborou com diversas instituições eclesiásticas, entre outros: Colegiada de Cedofeita, Paróquia da Boavista, Carmelitas de Gondarém (Porto), Mosteiro de Santa Escolástica (Roriz), Basílica St. Emmeram (Regensburg), Hl. Dreifaltigkeit (Steinweg), St. Cäcilia (Regensburg), Colegiada da Oliveira (Guimarães), Comunidade Evangélica Alemã (Porto), St. Elisabeth Kareth (Lappersdorf), Heiliger Geist (Regensburg). Docente de técnica vocal e canto em Regensburg.</p>
+    <h2 style="text-align: left;">Sänger und Dozent.</h2>
+    <p style="text-align: justify;">Lyrischer Bariton. Schüler von Nuno de Vilallonga (Madrid/Lissabon). Mitglied des <em>Círculo Portuense de Ópera</em> mit Auftritten im Coliseu do Porto (2004–2007). Taetig als Chorleiter, Organist, Sänger und Dozent bei verschiedenen kirchlichen Institutionen: Kollegiatkirche Cedofeita, Pfarrei Boavista, Karmelitinnenkloster Gondarém (Porto), Benediktinerinnenkloster Santa Escolástica (Roriz), Basilika St. Emmeram (Regensburg), Hl. Dreifaltigkeit (Steinweg), St. Cäcilia (Regensburg), Kollegiatkirche Oliveira (Guimarães), Evangelische Gemeinde Porto, St. Elisabeth Kareth (Lappersdorf), Heiliger Geist (Regensburg). Unterrichtstätigkeit in Gesang und Stimmbildung in Regensburg.</p>
 
-    <h2 style="text-align: left;">Director Artístico.</h2>
-    <p style="text-align: justify;">Promotor dos Órgãos Históricos de Portugal em ciclos de divulgação, formatos de <em>concerto didáctico</em> e <em>visita musical</em>. Autor das <em>Jornadas do Grande Órgão Histórico da Oliveira</em> (Guimarães) para dinamização cultural daquele Monumento Nacional, a partir do maior órgão histórico do Norte de Portugal (Carvalho 1831-1841). Autor e Director Artístico do Projecto de Inauguração e Dinamização Cultural do Órgão Histórico de Santa Marinha do Zêzere (2023-2024), apoiado pela Direcção-Geral das Artes e pelo Município de Baião. Inaugurou os órgãos históricos restaurados de Santa Clara do Porto e de Santa Marinha do Zêzere.</p>
+    <h2 style="text-align: left;">Künstlerischer Leiter.</h2>
+    <p style="text-align: justify;">Förderer des portugiesischen Orgelerbes in Festivals, Konferenzen und Fachkongresse. Entwicklung von Formaten der kulturellen Vermittlung wie <em>didaktisches Konzert</em> und <em>musikalische Führung</em> an historischen Orgeln. Autor der <em>Tage der Historischen Orgel der Oliveira</em> (Guimarães, 2019–2023) zur kulturellen Belebung des Nationaldenkmals. Autor und künstlerischer Leiter des Programms <em>Eröffnung und kulturelle Belebung der historischen Orgel von Santa Marinha do Zêzere</em> (2023–2024), gefördert von der <em>Direção-Geral das Artes</em> und der Stadt Baião. Leitung der Wiedereinweihung der restaurierten historischen Orgeln von Santa Clara do Porto und Santa Marinha do Zêzere.</p>
   </div>
 </main>
 
