--- a/index-de.html
+++ b/index-de.html
@@ -19,7 +19,7 @@
         <div class="menu-direita">
             <ul>
                 <li><a href="index-de.html">HOME</a></li>        
-                <li><a href="biografia-de.html">CURRICULUM VITAE</a></li>    
+                <li><a href="biografia-de.html">BIOGRAPHIE</a></li>    
                 <li><a href="dominios-de.html">LEISTUNGEN</a></li>   
                 <li><a href="actividades-de.html">TÄTIGKEITEN</a></li> 
                 <li><a href="publicacoes-de.html">BEITRÄGE</a></li> 
@@ -42,9 +42,9 @@
 
     <div class="hero-text">
         <h1 class="titulo-clasico"><big><big>N</big></big>UNO <big><big>M</big></big>IMOSO</h1>
-        <p style="text-transform: lowercase; font-style: italic; white-space: nowrap;">
-            Kirchenmusik · Musikwissenschaft · Künstlerische Leitung  
-        </p>        
+        <p style="text-transform: none; font-style: italic; white-space: nowrap;">
+    Kirchenmusik. Orgelkunde. Musikalisches Kulturerbe
+</p>   
     </div>
 </section>
 
