--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 
     <div class="hero-text">
         <h1 class="titulo-clasico"><big><big>N</big></big>UNO <big><big>M</big></big>IMOSO</h1>
-        <p style="text-transform: lowercase; font-style: italic; white-space: nowrap;">
-            música sacra · musicologia · direcção artística
-        </p>        
+        <p style="text-transform: none; font-style: italic; white-space: nowrap;">
+    Música Sacra. Organologia. Património Musical
+</p>
+      
     </div>
 </section>
 
