--- a/publicacoes-de.html
+++ b/publicacoes-de.html
@@ -26,7 +26,7 @@
         <div class="menu-direita">
             <ul>
         <li><a href="index-de.html">HOME</a></li>        
-        <li><a href="biografia-de.html">CURRICULUM VITAE</a></li>    
+        <li><a href="biografia-de.html">BIOGRAPHIE</a></li>    
         <li><a href="dominios-de.html">LEISTUNGEN</a></li>   
         <li><a href="actividades-de.html">TÄTIGKEITEN</a></li> 
         <li><a href="publicacoes-de.html">BEITRÄGE</a></li> 
