--- a/dominios-de.html
+++ b/dominios-de.html
@@ -120,7 +120,7 @@
     <div class="menu-direita">
       <ul>
         <li><a href="index-de.html">HOME</a></li>        
-        <li><a href="biografia-de.html">CURRICULUM VITAE</a></li>    
+        <li><a href="biografia-de.html">BIOGRAPHIE</a></li>    
         <li><a href="dominios-de.html">LEISTUNGEN</a></li>   
         <li><a href="actividades-de.html">TÄTIGKEITEN</a></li> 
         <li><a href="publicacoes-de.html">BEITRÄGE</a></li> 
@@ -196,9 +196,17 @@
     </div>
 
     <div class="accordion-item">
-      <button class="accordion-header">Musikalisches Kulturerbe. Kritische Editionen von Musikquellen.</button>
+      <button class="accordion-header has-content">Musikalisches Kulturerbe. Kritische Editionen von Musikquellen.</button>
       <div class="accordion-content">
-        <p></p>
+        <p>
+  <a href="https://biblioteca.patrimoniocultural.gov.pt/catalogo/winlibsrch.aspx?pesq=3&doc=32883"
+     target="_blank"
+     rel="noopener noreferrer"
+     style="text-decoration: none; color: #0056b3; font-weight: bold;">
+      Património Musical de Santa Clara do Porto - Nuno Mimoso - 2023
+
+  </a>
+</p>
       </div>
     </div>
     
