--- a/dominios-de.html
+++ b/dominios-de.html
@@ -120,7 +120,7 @@
     <div class="menu-direita">
       <ul>
         <li><a href="index-de.html">HOME</a></li>        
-        <li><a href="biografia-de.html">BIOGRAPHIE</a></li>    
+        <li><a href="biografia-de.html">VITA</a></li>    
         <li><a href="dominios-de.html">LEISTUNGEN</a></li>   
         <li><a href="actividades-de.html">TÄTIGKEITEN</a></li> 
         <li><a href="publicacoes-de.html">BEITRÄGE</a></li> 
